--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <FrameLayout
-        android:id="@+id/frame"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tab"
         android:layout_width="match_parent"
