--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,138 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tab"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/tab"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
-    <com.flyco.tablayout.CommonTabLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/tab"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <ImageView
+            android:id="@+id/iv_home"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="6.5dp"
+            android:src="@mipmap/ic_home_home_on"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_message"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="6.5dp"
+            android:src="@mipmap/ic_home_talk_off"
+            app:layout_constraintEnd_toStartOf="@id/iv_add"
+            app:layout_constraintStart_toEndOf="@id/iv_home"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_add"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="6.5dp"
+            android:src="@mipmap/ic_home_add"
+            app:layout_constraintEnd_toStartOf="@id/iv_wallet"
+            app:layout_constraintStart_toEndOf="@id/iv_message"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_wallet"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="6.5dp"
+            android:src="@mipmap/ic_home_nike_off"
+            app:layout_constraintEnd_toStartOf="@id/iv_my"
+            app:layout_constraintStart_toEndOf="@id/iv_add"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_my"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="6.5dp"
+            android:layout_marginEnd="26dp"
+            android:src="@mipmap/ic_home_my_off"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6.5dp"
+            android:layout_marginBottom="4.5dp"
+            android:text="首页"
+            android:textColor="#ff000000"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/iv_home"
+            app:layout_constraintStart_toStartOf="@id/iv_home"
+            app:layout_constraintTop_toBottomOf="@id/iv_home" />
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6.5dp"
+            android:layout_marginBottom="4.5dp"
+            android:text="消息"
+            android:textColor="#ff000000"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/iv_message"
+            app:layout_constraintStart_toStartOf="@id/iv_message"
+            app:layout_constraintTop_toBottomOf="@id/iv_message" />
+
+        <TextView
+            android:id="@+id/tv_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6.5dp"
+            android:layout_marginBottom="4.5dp"
+            android:text="发帖"
+            android:textColor="#ff000000"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/iv_add"
+            app:layout_constraintStart_toStartOf="@id/iv_add"
+            app:layout_constraintTop_toBottomOf="@id/iv_add" />
+
+        <TextView
+            android:id="@+id/tv_wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6.5dp"
+            android:layout_marginBottom="4.5dp"
+            android:text="钱包"
+            android:textColor="#ff000000"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/iv_wallet"
+            app:layout_constraintStart_toStartOf="@id/iv_wallet"
+            app:layout_constraintTop_toBottomOf="@id/iv_wallet" />
+
+
+        <TextView
+            android:id="@+id/tv_my"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6.5dp"
+            android:layout_marginBottom="4.5dp"
+            android:text="我的"
+            android:textColor="#ff000000"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/iv_my"
+            app:layout_constraintStart_toStartOf="@id/iv_my"
+            app:layout_constraintTop_toBottomOf="@id/iv_my" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
