--- a/app/src/main/res/layout/item_my.xml
+++ b/app/src/main/res/layout/item_my.xml
@@ -10,8 +10,12 @@
         android:id="@+id/image"
         android:layout_width="22dp"
         android:layout_height="22dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="11.5dp"
-        android:layout_marginEnd="11.5dp" />
+        android:layout_marginEnd="11.5dp"
+        android:src="@mipmap/ic_my_tieba"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -33,12 +37,14 @@
         android:textColor="#ff000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/image"
+        app:layout_constraintStart_toEndOf="@id/tv_name"
         app:layout_constraintTop_toTopOf="@id/image" />
 
     <ImageView
         android:layout_width="10dp"
         android:layout_height="17.5dp"
         android:layout_marginEnd="22.5dp"
+        android:src="@mipmap/ic_go"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginStart="53.5dp"
+        android:layout_marginTop="11.5dp"
         android:background="@color/qmui_config_color_gray_1"
         app:layout_constraintTop_toBottomOf="@id/image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
