--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -7,9 +7,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_2BA4D9"
+        android:layout_height="wrap_content"
+
+        android:padding="0dp"
         tools:ignore="MissingConstraints">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@color/color_2BA4D9" />
 
         <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
             android:id="@+id/bg_two"
@@ -19,6 +25,7 @@
             app:layout_constraintBottom_toBottomOf="@id/create_level"
             app:layout_constraintTop_toBottomOf="@id/iv_setting"
             app:qmui_backgroundColor="@color/qmui_config_color_white"
+            app:qmui_borderWidth="0dp"
             app:qmui_radiusTopLeft="15dp"
             app:qmui_radiusTopRight="15dp" />
 
@@ -216,6 +223,7 @@
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/tv_position"
             app:qmui_backgroundColor="#83C6FB"
+            app:qmui_borderWidth="0dp"
             app:qmui_radius="10dp" />
 
         <TextView
@@ -340,12 +348,12 @@
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:background="@color/qmui_config_color_white"
             android:paddingTop="10dp"
             android:paddingBottom="34dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bg_two" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
