--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,9 +13,47 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="18dp"
-        android:src="@mipmap/ic_close_x"
         android:layout_marginTop="18dp"
+        android:src="@mipmap/ic_close_x"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_marginTop="27.5dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_close"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="28.5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="欢迎使用"
+        android:textColor="#ff020202"
+        android:textSize="21sp"
+        />
+    <TextView
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="@id/tv_title"
+        android:layout_marginTop="21dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="请先登录数字海"
+        android:textColor="#ff989898"
+        android:textSize="13sp"
+        />
+    <EditText
+        android:id="@+id/et_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/conner5_solid_gray"
+        android:hint="请输入手机号"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginEnd="28.5dp"
+        android:layout_marginTop="81dp"
+        android:paddingStart="12dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:textColorHint="#989898"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
