--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,39 +21,189 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_marginTop="27.5dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_close"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="28.5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginTop="27.5dp"
         android:text="欢迎使用"
         android:textColor="#ff020202"
         android:textSize="21sp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_close" />
+
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        android:layout_marginTop="21dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="21dp"
         android:text="请先登录数字海"
         android:textColor="#ff989898"
         android:textSize="13sp"
-        />
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
     <EditText
         android:id="@+id/et_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginTop="81dp"
+        android:layout_marginEnd="28.5dp"
         android:background="@drawable/conner5_solid_gray"
         android:hint="请输入手机号"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginEnd="28.5dp"
-        android:layout_marginTop="81dp"
         android:paddingStart="12dp"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:textColorHint="#989898"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
+    <ng.max.slideview.SlideView
+        android:id="@+id/slider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintEnd_toEndOf="@id/et_phone"
+        app:layout_constraintStart_toStartOf="@id/et_phone"
+        app:layout_constraintTop_toBottomOf="@id/et_phone"
+        app:sv_buttonBackgroundColor="#FF2BA4D9"
+        app:sv_buttonImage="@mipmap/ic_right_hua"
+        app:sv_slideBackgroundColor="#FFF5F5F5"
+        app:sv_slideText="右滑验证"
+        app:sv_slideTextColor="#FF989898" />
+
+    <EditText
+
+        android:id="@+id/et_psd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="28.5dp"
+        android:background="@drawable/conner5_solid_gray"
+        android:hint="请输入手密码"
+        android:paddingStart="12dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:textColorHint="#989898"
+        app:layout_constraintTop_toBottomOf="@id/slider" />
+
+    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+        android:id="@+id/rb_ok"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:padding="16dp"
+        android:text="登录"
+        android:textColor="@color/qmui_config_color_white"
+        app:layout_constraintEnd_toEndOf="@id/et_phone"
+        app:layout_constraintStart_toStartOf="@id/et_phone"
+        app:layout_constraintTop_toBottomOf="@id/et_psd"
+        app:qmui_backgroundColor="#FF017BD0" />
+
+    <TextView
+        android:id="@+id/tv_reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:text="重置密码"
+        android:textColor="#ff2ba4d9"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/rb_ok"
+        app:layout_constraintTop_toBottomOf="@id/rb_ok" />
+
+    <TextView
+        android:id="@+id/tv_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:text="注册数字海"
+        android:textColor="#ff2ba4d9"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@id/rb_ok"
+        app:layout_constraintTop_toBottomOf="@id/rb_ok" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="其他登录方式"
+        android:textColor="#ff989898"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_reset" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="20dp"
+        android:background="#989898"
+        app:layout_constraintBottom_toBottomOf="@id/title"
+        app:layout_constraintEnd_toStartOf="@id/title"
+        app:layout_constraintStart_toStartOf="@id/rb_ok"
+        app:layout_constraintTop_toTopOf="@id/title" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="20dp"
+        android:background="#989898"
+        app:layout_constraintBottom_toBottomOf="@id/title"
+        app:layout_constraintEnd_toEndOf="@id/rb_ok"
+        app:layout_constraintStart_toEndOf="@id/title"
+        app:layout_constraintTop_toTopOf="@id/title" />
+
+    <ImageView
+        android:id="@+id/iv_phone"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="28dp"
+        android:src="@mipmap/ic_phone"
+        app:layout_constraintEnd_toStartOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:text="手机号登陆"
+        android:textColor="#ff989898"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@id/iv_phone"
+        app:layout_constraintStart_toStartOf="@id/iv_phone"
+        app:layout_constraintTop_toBottomOf="@id/iv_phone" />
+
+    <ImageView
+        android:id="@+id/iv_wx"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
+        android:src="@mipmap/ic_weixin_logo"
+        app:layout_constraintStart_toEndOf="@id/title"
+        app:layout_constraintTop_toTopOf="@id/iv_phone" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:text="微信登陆"
+        android:textColor="#ff989898"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@id/iv_wx"
+        app:layout_constraintStart_toStartOf="@id/iv_wx"
+        app:layout_constraintTop_toBottomOf="@id/iv_wx" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
+        android:text="登录表示同意《数字海用户协议》"
+        android:textColor="#ff5d5d5d"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
