--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,6 +38,7 @@
         android:text="请先登录数字海"
         android:textColor="#ff989898"
         android:textSize="13sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
@@ -46,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="28.5dp"
-        android:layout_marginTop="81dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="28.5dp"
         android:background="@drawable/conner5_solid_gray"
         android:hint="请输入手机号"
@@ -73,14 +74,14 @@
 
     <EditText
 
-        android:id="@+id/et_psd"
+        android:id="@+id/et_get_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="28.5dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="28.5dp"
         android:background="@drawable/conner5_solid_gray"
-        android:hint="请输入手密码"
+        android:hint="请输入验证码"
         android:paddingStart="12dp"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
@@ -93,12 +94,56 @@
         android:layout_height="wrap_content"
         android:paddingEnd="15dp"
         android:text="获取验证码"
-        android:visibility="gone"
         android:textColor="#FF2BA4D9"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/et_psd"
-        app:layout_constraintEnd_toEndOf="@id/et_psd"
-        app:layout_constraintTop_toTopOf="@id/et_psd" />
+        app:layout_constraintBottom_toBottomOf="@id/et_get_code"
+        app:layout_constraintEnd_toEndOf="@id/et_get_code"
+        app:layout_constraintTop_toTopOf="@id/et_get_code" />
+
+    <EditText
+        android:id="@+id/et_psd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="28.5dp"
+        android:background="@drawable/conner5_solid_gray"
+        android:hint="请输入密码"
+        android:paddingStart="12dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:textColorHint="#989898"
+        app:layout_constraintTop_toBottomOf="@id/et_get_code" />
+
+    <EditText
+        android:id="@+id/et_ok_psd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="28.5dp"
+        android:background="@drawable/conner5_solid_gray"
+        android:hint="请再次输入密码"
+        android:paddingStart="12dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:textColorHint="#989898"
+        app:layout_constraintTop_toBottomOf="@id/et_psd" />
+
+    <EditText
+        android:id="@+id/et_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28.5dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="28.5dp"
+        android:background="@drawable/conner5_solid_gray"
+        android:hint="请再次输入账号"
+        android:paddingStart="12dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:textColorHint="#989898"
+        app:layout_constraintTop_toBottomOf="@id/et_ok_psd" />
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
         android:id="@+id/rb_ok"
@@ -106,108 +151,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:padding="16dp"
-        android:text="登录"
+        android:text="注册"
         android:textColor="@color/qmui_config_color_white"
         app:layout_constraintEnd_toEndOf="@id/et_phone"
         app:layout_constraintStart_toStartOf="@id/et_phone"
-        app:layout_constraintTop_toBottomOf="@id/et_psd"
+        app:layout_constraintTop_toBottomOf="@id/et_number"
         app:qmui_backgroundColor="#FF017BD0" />
 
-    <TextView
-        android:id="@+id/tv_reset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="16dp"
-        android:text="重置密码"
-        android:textColor="#ff2ba4d9"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/rb_ok"
-        app:layout_constraintTop_toBottomOf="@id/rb_ok" />
-
-    <TextView
-        android:id="@+id/tv_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="5dp"
-        android:text="注册数字海"
-        android:textColor="#ff2ba4d9"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/rb_ok"
-        app:layout_constraintTop_toBottomOf="@id/rb_ok" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="其他登录方式"
-        android:textColor="#ff989898"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_reset" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginEnd="20dp"
-        android:background="#989898"
-        app:layout_constraintBottom_toBottomOf="@id/title"
-        app:layout_constraintEnd_toStartOf="@id/title"
-        app:layout_constraintStart_toStartOf="@id/rb_ok"
-        app:layout_constraintTop_toTopOf="@id/title" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="20dp"
-        android:background="#989898"
-        app:layout_constraintBottom_toBottomOf="@id/title"
-        app:layout_constraintEnd_toEndOf="@id/rb_ok"
-        app:layout_constraintStart_toEndOf="@id/title"
-        app:layout_constraintTop_toTopOf="@id/title" />
-
-    <ImageView
-        android:id="@+id/iv_phone"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="28dp"
-        android:src="@mipmap/ic_phone"
-        app:layout_constraintEnd_toStartOf="@id/title"
-        app:layout_constraintTop_toBottomOf="@id/title" />
-
-    <TextView
-        android:id="@+id/tv_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:text="手机号登陆"
-        android:textColor="#ff989898"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="@id/iv_phone"
-        app:layout_constraintStart_toStartOf="@id/iv_phone"
-        app:layout_constraintTop_toBottomOf="@id/iv_phone" />
-
-    <ImageView
-        android:id="@+id/iv_wx"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:src="@mipmap/ic_weixin_logo"
-        app:layout_constraintStart_toEndOf="@id/title"
-        app:layout_constraintTop_toTopOf="@id/iv_phone" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:text="微信登陆"
-        android:textColor="#ff989898"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="@id/iv_wx"
-        app:layout_constraintStart_toStartOf="@id/iv_wx"
-        app:layout_constraintTop_toBottomOf="@id/iv_wx" />
 
     <TextView
         android:layout_width="wrap_content"
