--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/qmui_config_color_white"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
     tools:ignore="MissingConstraints">
@@ -36,9 +37,20 @@
         android:text=""
         android:textColor="#ff020202"
         android:textSize="16sp"
-        android:background="@color/qmui_config_color_white"
+
         app:layout_constraintBottom_toBottomOf="@id/iv_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_back" />
+    <TextView
+        android:id="@+id/tv_end_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#FFA6A6A6"
+        android:layout_marginEnd="12dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_back"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_back" />
 </androidx.constraintlayout.widget.ConstraintLayout>
