--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,6 @@
     <declare-styleable name="MyTitleBar">
         <attr name="star_txt" format="string" />
         <attr name="center_txt" format="string" />
+        <attr name="end_txt" format="string" />
     </declare-styleable>
 </resources>
