--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,6 +54,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="28.5dp"
             android:background="@drawable/conner5_solid_gray"
+
             android:hint="请输入手机号"
             android:maxLength="11"
             android:paddingStart="12dp"
@@ -87,6 +88,8 @@
             android:layout_marginEnd="28.5dp"
             android:background="@drawable/conner5_solid_gray"
             android:hint="请输入验证码"
+            android:lines="1"
+            android:maxLength="6"
             android:paddingStart="12dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
@@ -114,6 +117,7 @@
             android:layout_marginEnd="28.5dp"
             android:background="@drawable/conner5_solid_gray"
             android:hint="请输入密码"
+            android:lines="1"
             android:paddingStart="12dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
@@ -129,6 +133,7 @@
             android:layout_marginEnd="28.5dp"
             android:background="@drawable/conner5_solid_gray"
             android:hint="请再次输入密码"
+            android:lines="1"
             android:paddingStart="12dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
@@ -144,6 +149,7 @@
             android:layout_marginEnd="28.5dp"
             android:background="@drawable/conner5_solid_gray"
             android:hint="请再次输入账号"
+            android:lines="1"
             android:paddingStart="12dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
@@ -167,14 +173,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="36dp"
+            android:paddingBottom="30dp"
             android:text="登录表示同意《数字海用户协议》"
             android:textColor="#ff5d5d5d"
             android:textSize="12sp"
-            android:layout_marginTop="30dp"
-            android:paddingBottom="30dp"
-            app:layout_constraintTop_toBottomOf="@id/rb_ok"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rb_ok" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
