--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -271,7 +271,7 @@
         app:layout_constraintTop_toBottomOf="@id/iv_no_login" />
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-        android:id="@+id/QMUIRoundButton"
+        android:id="@+id/rb_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -294,5 +294,5 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:constraint_referenced_ids="iv_no_login,tv_login,QMUIRoundButton" />
+        app:constraint_referenced_ids="iv_no_login,tv_login,rb_login" />
 </androidx.constraintlayout.widget.ConstraintLayout>
