--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -163,7 +163,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
-        android:text="0"
+        android:text=""
         android:textColor="#ffffffff"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/bg_one"
@@ -175,7 +175,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
-        android:text="0"
+        android:text=""
         android:textColor="#ffffffff"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/bg_one"
@@ -187,7 +187,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
-        android:text="0"
+        android:text=""
         android:textColor="#ffffffff"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/bg_one"
