--- a/app/src/main/res/layout/activity_edit_my_information.xml
+++ b/app/src/main/res/layout/activity_edit_my_information.xml
@@ -211,8 +211,8 @@
             android:textSize="15sp" />
 
 
-        <EditText
-            android:id="@+id/et_address"
+        <TextView
+            android:id="@+id/tv_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="19dp"
@@ -264,5 +264,30 @@
             android:layout_height="17.5dp"
             android:src="@mipmap/ic_go"
             app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="50dp"
+        android:id="@+id/ll_ok"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/qmui_config_color_white"
+        android:orientation="horizontal"
+        android:paddingStart="16dp"
+        android:paddingTop="17.5dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="17.5dp">
+
+        <TextView
+            android:id="@+id/tv_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/qmui_config_color_white"
+            android:text="保存修改"
+            android:textColor="@color/qmui_config_color_red"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
