--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="21dp"
             android:layout_marginTop="30dp"
-            android:text="ALAN"
+            android:text=""
             android:textColor="#ff000000"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="数字号 : szh_827211481"
+            android:text="数字号 : "
             android:textColor="#ff5d5d5d"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_name"
