--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/qmui_config_color_white"
+    android:orientation="vertical"
+    tools:ignore="MissingConstraints">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_tuijian"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="11dp"
+        android:paddingTop="14dp"
+        android:paddingEnd="11dp"
+        android:paddingBottom="16dp"
+        android:text="推荐"
+        android:textColor="#ff959595"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/tv_bangdan"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bangdan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="11dp"
+        android:paddingTop="14dp"
+        android:paddingEnd="11dp"
+        android:paddingBottom="16dp"
+        android:text="榜单"
+        android:textColor="#ff959595"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/tv_guanzhu"
+        app:layout_constraintStart_toEndOf="@id/tv_tuijian" />
+
+    <TextView
+        android:id="@+id/tv_guanzhu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="11dp"
+        android:paddingTop="14dp"
+        android:paddingEnd="11dp"
+        android:paddingBottom="16dp"
+        android:text="关注"
+        android:textColor="#ff959595"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_bangdan" />
+
+    <ImageView
+        android:id="@+id/iv_add"
+        android:layout_width="19dp"
+        android:layout_height="19dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@mipmap/ic_add_circle"
+        app:layout_constraintBottom_toBottomOf="@id/tv_guanzhu"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_search"
+        android:layout_width="19dp"
+        android:layout_height="19dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@mipmap/ic_search"
+        app:layout_constraintBottom_toBottomOf="@id/tv_guanzhu"
+        app:layout_constraintEnd_toStartOf="@id/iv_add" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_bangdan" />
+</androidx.constraintlayout.widget.ConstraintLayout>
