--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="color_FC6258">#FC6258</color>
     <color name="color_137ED0">#FF137ED0</color>
     <color name="color_5b5b5b">#ff5b5b5b</color>
+    <color name="color_959595">#ff959595</color>
+
 </resources>
