--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -35,9 +35,14 @@
         app:layout_constraintStart_toEndOf="@id/tv_zixun" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/recycler_g"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         app:layout_constraintTop_toBottomOf="@id/tv_zixun" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_v"
+        app:layout_constraintTop_toBottomOf="@id/recycler_g"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
