--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,8 @@
     <color name="color_137ED0">#FF137ED0</color>
     <color name="color_5b5b5b">#ff5b5b5b</color>
     <color name="color_959595">#ff959595</color>
+    <color name="color_111111">#ff111111</color>
+    <color name="color_137ed0">#ff137ed0</color>
+
 
 </resources>
